test/library/standard/Communication/errors.getHiLoc.good
errors.chpl:18: error: halt reached - The source locale ID (2) for Communication.get is out of bounds.
