test/library/standard/Communication/errors.prediff
#!/bin/bash

sed "s/\(errors\.chpl\):[[:digit:]]\+/\1:PREDIFFED_LINENO/" $2
